@@ -1,3 +1,14 @@
+2021-05-26  Aakash Jain  <aakash_jain@apple.com>
+
+        Do not skip SetCommitQueueMinusFlagOnPatch step on EWS test instances
+        https://bugs.webkit.org/show_bug.cgi?id=226289
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-build/steps.py:
+        (SetCommitQueueMinusFlagOnPatch.start):
+        (SetCommitQueueMinusFlagOnPatch.doStepIf): Deleted.
+
 2021-05-26  Jonathan Bedard  <jbedard@apple.com>
 
         [run-webkit-tests] Strip php support from webserver (Apache)
